# tinkertrap

./: .gitmodules  README.md
components/who_task/: who_task_state.cpp
examples/pedestrian_detect/main/: app_main.cpp
examples/single_image_ped_detect/: CMakeLists.txt  dependencies.lock.esp32s3  idf_component.yml  test.rgb
examples/single_image_ped_detect/components/pedestrian_detect/: CMakeLists.txt  detect_single_image.cpp
examples/single_image_ped_detect/components/pedestrian_detect/esp-dl/models/pedestrian_detect/: CMakeLists.txt
examples/single_image_ped_detect/main/: CMakeLists.txt  detect_single_image.cpp  detect_single_image.hpp
