idf_component_register(SRCS "/Users/mahikamaini/esp/esp-who-2/examples/single_image_ped_detect/components/pedestrian_detect/esp-dl/models/pedestrian_detect/pedestrian_detect.cpp"
                       INCLUDE_DIRS "." 
                       PRIV_INCLUDE_DIRS "${CMAKE_BINARY_DIR}/config"
                       )
